# Homework

./: .clang-format  .gitignore  .gitmodules  .pylintrc  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CahnHilliard_1D.m  Homework.cpp  LICENSE  Makefile  README.md  format.ps1  main.c  main.h  run.sh  temp.csv  temp.ipynb  vcpkg.json
CMake/: function.cmake
Common/: CMakeLists.txt  Localize.hpp  main.cpp
Common/Atomic/: CMakeLists.txt  main.cpp
Common/Coroutine/: main.cpp  minicoro.hpp  test_minicoro.cpp
Common/Macro/: CMakeLists.txt  main.cpp
Common/RTTI/: CMakeLists.txt  RTTI.hpp  RTTI.md  main.cpp
LaTeX/: class.cls  graph.sty  main.tex  style.sty
LeetCode/: CMakeLists.txt  main.cpp
LeetCode/CodingInterviews/: 05  06  09  24  30  30.cpp  35  CMakeLists.txt
LeetCode/CodingInterviews/include/: lstack.cpp
LeetCode/CodingInterviews/src/: 03.cpp  05.cpp  06.cpp  11.cpp  24.cpp  32.cpp  35.cpp  53.cpp
LeetCode/CodingInterviews/test/: CodingCPP_Unit_Tests  test_09.cpp
LeetCode/DP/: CMakeLists.txt
LeetCode/DP/include/: Solution.hpp
LeetCode/DP/include/dplib/: solution.hpp
LeetCode/DP/src/: 0198.cpp  0300.cpp  0322.cpp  0338.cpp  0509.cpp  0746.cpp  1137.cpp  1143.cpp  CMakeLists.txt  main.cpp
LeetCode/DP/test/: CMakeLists.txt  test_0509.cpp  test_0746.cpp  test_1143.cpp  test_main.cpp
LeetCode/Easy/: 0001.c  0001.cpp  0007_Reverse_Integer.c  0009.c  0013.c  0013_Roman_to_Integer.c  0014.c  0014_Longest_Common_Prefix.c  0020.c  0021.c  0021_Merge_Two_Sorted_Lists.c  0026.c  0026_Remove_Duplicates_from_Sorted_Array.c  0027.c  0027_Remove_Element.c  0028.c  0028_Implement_strStr().c  0035.c  0053.c  0053_Maximum_Subarray.c  0058.c  0058_Length_of_Last_Word.c  0066.c  0067.c  0069.c  0069.cpp  0069_Sqrt(x).c  0070.c  0070.cpp  0083.c  0088.c  0088_Merge_Sorted_Array.c  0094.cpp  0100.c  0100_Same_Tree.c  0101.c  0104.c  0169.cpp  0217.cpp  0231.cpp  (+58 more)
LeetCode/Hard/: 0164.cpp
LeetCode/Interview/: 0109.cpp  0207.cpp  0403.cpp  0805.cpp  1607.cpp  1701.cpp
LeetCode/LCP/: 06.cpp  44.cpp
LeetCode/Medium/: 0007.c  0029.cpp  0033.cpp  0050.cpp  0107.cpp  0138.cpp  0148.c  0148_Sort_List.c  0153.cpp  0222.cpp  0230.c  0371.cpp  0382.c  0397.cpp  0398.cpp  0429.cpp  0450.c  0450_Delete_Node_in_a_BST.c  0454.cpp  0814.cpp  0877.c  0877_Stone_Game.c  0912.cpp  0945.cpp  1035.cpp  1261.c  1325.c  1379.cpp  1492.cpp  1557.c  1669.cpp  1721.c  1780.c  1860.c  M0808_Permutation_II_LCCI.py
LeetCode/Offer/: CMakeLists.txt
LeetCode/Offer/include/: lstack.cpp
LeetCode/Offer/src/: 03.cpp  04.cpp  05.cpp  06.cpp  09.cpp  11.cpp  24.cpp  30.cpp  32.cpp  35.cpp  50.cpp  53.cpp  58.cpp  64.cpp  65.cpp
LeetCode/Offer/test/: CMakeLists.txt  test_09.cpp  test_main.cpp
LeetCode/Offer2/: 0047.cpp  0069.cpp  CMakeLists.txt
LeetCode/Offer2/src/: 0023.cpp  0047.cpp  0069.cpp
LeetCode/Offer2/test/: CMakeLists.txt  test_main.cpp
LeetCode/binary_search/: 0704.cpp  CMakeLists.txt  main.cpp
LeetCode/binary_search/include/bslib/: solution.hpp
LeetCode/binary_search/src/: 0034.cpp  0035.cpp  0268.cpp  0278.cpp  0374.cpp  0704.cpp
LeetCode/binary_search/test/: CMakeLists.txt
LeetCode/dp/: main.cpp
LeetCode/dp/src/: 0062.cpp  0064.cpp  0070.cpp  0392.cpp
LeetCode/dp/test/: test_0064.cpp
LeetCode/dynamic_programming/: CMakeLists.txt  main.cpp
LeetCode/dynamic_programming/include/dplib/: solution.hpp
LeetCode/dynamic_programming/src/: 0053.cpp  0064.cpp  0121.cpp  0198.cpp  0300.cpp  0322.cpp  0338.cpp  0392.cpp  0646.cpp  0673.cpp  0746.cpp  1137.cpp  1143.cpp
LeetCode/dynamic_programming/test/: test_0064.cpp  test_0509.cpp  test_0746.cpp  test_1143.cpp
LeetCode/linked_list/: 206.cpp  CMakeLists.txt
LeetCode/workspace/: CMakeLists.txt
LeetCode/workspace/include/: LeetCode.hpp
LeetCode/workspace/src/: 1027.最长等差数列.cpp  1143.最长公共子序列.cpp  1218.最长定差子序列.cpp  122.买卖股票的最佳时机-ii.cpp  203.移除链表元素.cpp  303.区域和检索-数组不可变.cpp  327.区间和的个数.cpp  33.搜索旋转排序数组.cpp  34.在排序数组中查找元素的第一个和最后一个位置.cpp  354.俄罗斯套娃信封问题.cpp  543.二叉树的直径.cpp  646.最长数对链.cpp  81.搜索旋转排序数组-ii.cpp
LeetCode/二分查找/: 二分查找.md
Luogu/: CMakeLists.txt  HDU1005.cpp  HDU2157.cpp  LOJ1070.cpp  LOJ1132.cpp  P1123.cpp  THUPC2021.cpp
Math/: CMakeLists.txt  main.cpp  math.cmake
Math/include/: core.hpp  geometry.hpp  mat.hpp  vec.hpp
Math/test/: CMakeLists.txt  test_basic.cpp  test_geometry.cpp
Model/: CMakeLists.txt  dragon_vrip.mtl  main.cpp
Notes/: AntiAliasing.md  C++.md  CMakeLists.txt  Common.md  Configure.md  GPT.md  Git Summary.md  GitSummary.md  Graph.md  Graphics.md  Interview.md  KMP.md  MemoryOrder.md  Pathfinding.md  Quiz.cpp  Quiz.md  SkyAtmosphere.md  UE5Cmd.md  UE5RDG.md  VirtualTexture.md  Why.md
NowCoder/: CMakeLists.txt  L206.cpp  QQ1.cpp  ZJ1.cpp  ZJ18.cpp  ZJ2.cpp  ZJ3.cpp
Pathfinding/: CMakeLists.txt  foo.cxx  main.cpp  pathfinding.hpp
Playground/: Backup.md  CMakeLists.txt  GenMat.hpp  input.txt  main.cpp  (+1 more)
Structure/LinkedList/: CMakeLists.txt  LinkedList.c  LinkedList.cpp  LinkedList.hpp
Structure/Tree/: BiTree.cpp  BinaryTree  BinaryTree.c  CMakeLists.txt  Output  RBTree.c  RBTree.cpp  RBTree.hpp  RedBlackTree  RedBlackTree.c  Run.sh  SegmentTree.cpp  SegmentTree.hpp  SegmentTreeTest.cpp  Temp  Temp.c  Tries.c  Tries.cpp  ValgrindLog  temp.md
Temp/: 404.html  CMakeLists.txt  Cargo.toml  Idea.py  Observer.cpp  TX01.cpp  TX01.ipynb  TX01.py  hello.html  log.txt  main.cpp  main.java  test.cpp  test_dummy.cpp
Temp/hello/: test.lua  xmake.lua
Temp/hello/src/: 1143.cpp  main.cpp
Temp/hello/test/: test_1143.cpp
Temp/src/: base.rs  lib.rs  main.rs
Templates/: CMakeLists.txt
Templates/include/templib/: base.hpp  sort.hpp  table.hpp
Templates/src/: CMakeLists.txt  main.cpp
Templates/test/: CMakeLists.txt  test_0001.cpp  test_0002.cpp
Unity/: CMakeLists.txt  IUnityGraphics.hpp  IUnityGraphicsVulkan.hpp  IUnityInterface.hpp  PlatformBase.hpp  RenderAPI.cpp  RenderAPI.hpp  RenderAPI_Vulkan.cpp  RenderAPI_Vulkan.hpp  main.cpp
Vision/: CMakeLists.txt  HeightMap.hpp  image.cpp  image.hpp  main.cpp  output.txt  stbar.ipynb  test_vision.cpp  vertex.hpp
(+95 files in other folders)
